[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/Settings.png" type="Texture" id=1]
[ext_resource path="res://Menus/Title.gd" type="Script" id=2]
[ext_resource path="res://sprites/Play.png" type="Texture" id=3]
[ext_resource path="res://sprites/Credits.png" type="Texture" id=4]
[ext_resource path="res://sprites/Title Label-1.png-1.png.png" type="Texture" id=5]
[ext_resource path="res://sprites/Quit.png.png" type="Texture" id=6]
[ext_resource path="res://sprites/Play_Highlight-1.png.png" type="Texture" id=7]
[ext_resource path="res://sprites/Quit_highlight-1.png.png" type="Texture" id=8]
[ext_resource path="res://sprites/Credits_highlight-1.png.png" type="Texture" id=9]
[ext_resource path="res://sprites/Settings_highlight-1.png.png" type="Texture" id=10]
[ext_resource path="res://sprites/Fade - Boxel.png" type="Texture" id=11]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Fade-Boxel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -300, 365 ), Vector2( -2500, 365 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Fade-Boxel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2500, 365 ) ]
}

[node name="Title" type="Node"]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 38.0
margin_top = 98.0
margin_right = 1242.0
margin_bottom = 622.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1204.0
margin_bottom = 524.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 672.0
margin_bottom = 524.0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 676.0
margin_right = 1204.0
margin_bottom = 524.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 524.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 528.0
margin_bottom = 524.0
alignment = 1

[node name="Play" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 128.0
size_flags_horizontal = 7
size_flags_vertical = 7
theme = SubResource( 1 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )
stretch_mode = 3

[node name="Settings" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 528.0
margin_bottom = 260.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 10 )

[node name="Credits" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 528.0
margin_bottom = 392.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 9 )

[node name="Quit" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 528.0
margin_bottom = 524.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Container" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fade-Boxel" type="Sprite" parent="Container"]
position = Vector2( -2500, 365 )
texture = ExtResource( 11 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
